--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -9,6 +9,6 @@
   <div class="player" id="clappr"></div>
   <script src="bundle.js"></script>
   <script type="text/javascript">
-    clapprEventsLogger.main("#clappr")('https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8')();
+    clapprEventsLogger.main("#clappr")('HTTP://EXAMPLE.COM/NOT-FOUND.m3u8')();
   </script>
 <body>
