--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <p>Player should appear just below if you have configured hls address in index.html correctly.</p>
-  <p>Please check console to see event logging and check `src/Main.purs` for additional info.</p>
+  <p>Please check console to see event logging and also check `README.md` and `src/Main.purs` for additional info.</p>
   <div class="player" id="clappr"></div>
   <script src="bundle.js"></script>
   <script type="text/javascript">
