--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -9,6 +9,7 @@
   <div class="player" id="clappr"></div>
   <script src="bundle.js"></script>
   <script type="text/javascript">
-    clapprEventsLogger.main("#clappr")('HTTP://EXAMPLE.COM/NOT-FOUND.m3u8')();
+    // provide hls url in place of XXXXXX
+    clapprEventsLogger.main("#clappr")('XXXXXXX')();
   </script>
 <body>
