Add thumbnails plugin

--- a/examples/plugins/index.html
+++ b/examples/plugins/index.html
@@ -20,12 +20,12 @@
   <script type="text/javascript" src="./examplesPlugins.js"></script>
   <script>
     // provide hls url here
-    var source = "XXXXXXXXX";
+    var source = "xXXX";
     var streamrootKey = null;
     examplesPlugins.main({
       source: source,
       parentId: "#player",
-      streamrootKey: "848ff51f-dc32-485b-8de5-cae9f215d4f7"
+      streamrootKey: streamrootKey
     })();
   </script>
 
