Clean up installation by using `bower-npm-resolver`

--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -9,8 +9,8 @@
   <div class="player" id="clappr"></div>
   <script type="text/javascript" src="./examplesEvents.js"></script>
   <script type="text/javascript">
-    // provide hls url in place of XXXXXX
-    var source = "https://stream8.nadaje.com:3001/recordings/process_type%3Dwowza-vhost%26service_id%3D4434/iHP1142.stream_aac_2019-03-25_10%3A04%3A09/recording.mp4";
+    // provide video url here
+    var source = "VIDEO URL HERE";
     examplesEvents.main({ parentId: "#clappr", source: source })();
   </script>
 <body>
