--- a/examples/plugins/index.html
+++ b/examples/plugins/index.html
@@ -23,9 +23,8 @@
       <div id="player"></div>
       <script type="text/javascript" src="./examplesPlugins.js"></script>
       <script>
-        // provide hls url here
-        // var source = "https://stream8.nadaje.com:3001/recordings/process_type%3Dwowza-vhost%26service_id%3D4434/iHP1142.stream_aac_2019-03-25_10%3A04%3A09/recording.mp4";
-        var source = "https://1808506050.rsc.cdn77.org/live/studiorw/playlist.m3u8";
+        // Plase provide hls url here
+        var source = "VIDEO URL";
         examplesPlugins.main({
           source: source,
           parentId: "#player"
