--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
     <title>purescript-clappr plugins example</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-    <script>
-      var clappr = Clappr;
-    </script>
-    <script type="text/javascript" src="./node_modules/vast-ads/dist/vast-ads.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-12">
-      <a href="./examples/simple/index.html">Simple example</a>
-      <a href="./examples/plugins/index.html">Plugins example</a>
-      <a href="./examples/events/index.html">Events example</a>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><a href="./examples/simple/index.html">Simple example</a></td>
+              <td>Nothing special just plays your videos from examples.json</td>
+            </tr>
+            <tr>
+              <td><a href="./examples/plugins/index.html">Plugins example</a></td>
+              <td>Nothing special just plays your videos from examples.json</td>
+            </tr>
+            <tr>
+              <td><a href="./examples/events/index.html">Events example</a></td>
+              <td>Nothing special just plays your videos from examples.json</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <div id="player"></div>
