--- a/examples/plugins/index.html
+++ b/examples/plugins/index.html
@@ -24,7 +24,7 @@
       <script type="text/javascript" src="./examplesPlugins.js"></script>
       <script>
         // Plase provide hls url here
-        var source = "VIDEO URL";
+        var source = "http://stream6.nadaje.com:8580/live/ngrp:stream-1_all/playlist.m3u8";
         examplesPlugins.main({
           source: source,
           parentId: "#player"
