Update examples instructions

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -11,15 +11,15 @@
       <div class="col-12">
         <h1>purescript-clappr simple example</h1>
         <p>
-        To run this example you have to compile it:
+        To run this example you have to compile it from root director:
         </p>
 
         <code>
-          $ pulp build --include ./examples/simple/src
+          $ make
         </code>
 
         <p>
-        Then run webpack build from examples dir.
+        You should also edit index.html for this exmaple and setup valid video url there.
         </p>
 
         <div id="player"></div>
