Cleanup project structure

--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-6 col-sm-12">
       <div id="player"></div>
-      <script type="text/javascript" src="./examplesEvents.js"></script>
+      <script type="text/javascript" src="./bundle.js"></script>
       <script>
         // Plase provide hls url here
         var source = "VIDEO URL";
