--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -23,7 +23,7 @@
         </p>
 
         <div id="player"></div>
-        <script type="text/javascript" src="./examplesSimple.js"></script>
+        <script type="text/javascript" src="./bundle.js"></script>
         <script>
           // provide hls url here
           var source = "VIDEO URL HERE";
