--- a/examples/plugins/index.html
+++ b/examples/plugins/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-6 col-sm-12">
       <div id="player"></div>
-      <script type="text/javascript" src="./examplesPlugins.js"></script>
+      <script type="text/javascript" src="./bundle.js"></script>
       <script>
         // Plase provide hls url here
         var source = "VIDEO URL";
