Add docs for examples

--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
+        <p>
+        In order to run examples you have to setup your video source url (search for <code>VIDEO_URL</code> string) in:
+        </p>
+        <ul>
+          <li>examples/simple/index.html</li>
+          <li>examples/plugins/index.html</li>
+          <li>examples/events/index.html</li>
+        </ul>
+      </div>
+      <div class="col-12">
         <table class="table">
           <tbody>
             <tr>
               <td><a href="./examples/simple/index.html">Simple example</a></td>
-              <td>Nothing special just plays your videos from examples.json</td>
+              <td>Just clappr.</td>
             </tr>
             <tr>
               <td><a href="./examples/plugins/index.html">Plugins example</a></td>
-              <td>Nothing special just plays your videos from examples.json</td>
+              <td>Couple of plugins enabled (like responsive container etc).</td>
             </tr>
             <tr>
               <td><a href="./examples/events/index.html">Events example</a></td>
-              <td>Nothing special just plays your videos from examples.json</td>
+              <td>Example event handlers should log to the console.</td>
             </tr>
           </tbody>
         </table>
