Improve MediaControl plugin

--- a/examples/events/index.html
+++ b/examples/events/index.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>purescript-clappr plugins example</h1>
+      <h1>purescript-clappr events example - check the console</h1>
     </div>
     <div class="col-md-6 col-sm-12">
       <p>
@@ -24,7 +24,7 @@
       <script type="text/javascript" src="./bundle.js"></script>
       <script>
         // Plase provide hls url here
-        var source = "VIDEO URL";
+        var source = "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_10mb.mp4";
         examplesEvents.main({
           source: source,
           parentId: "#player"
