--- a/examples/plugins/index.html
+++ b/examples/plugins/index.html
@@ -21,7 +21,7 @@
       <script type="text/javascript" src="./bundle.js"></script>
       <script>
         // Plase provide hls url here
-        var source = "VIDEO URL";
+        var source = "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_10mb.mp4";
         examplesPlugins.main({
           source: source,
           parentId: "#player"
