--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -26,7 +26,7 @@
         <script type="text/javascript" src="./bundle.js"></script>
         <script>
           // provide hls url here
-          var source = "VIDEO URL HERE";
+          var source = "https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_10mb.mp4";
           examplesSimple.main({
             source: source,
             parentId: "#player",
